# ocr-agent

./: .gitignore  README.md
ocr_agent_rs/: Cargo.toml
ocr_agent_rs/.cargo/: config.toml
ocr_agent_rs/src/: main.rs
